@@ -13,6 +13,9 @@ STILL UNDER DEVELOPMENT; NOT RELEASED YET.
   the reuse of legacy test code), we don't want it to easily escape the
   automanaged work directory.
 
+* Issue 105: Use tmpfs instead of md as a temporary file system for
+  tests in FreeBSD so that we do not leak md(4) devices.
+
 * Issue 111: Fixed crash when defining a test program in a Kyuafile that
   has not yet specified the test suite name.
 
